--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model prjCatChaOnlineShop.Models.ShopCouponTotal
 @{
     ViewData["Title"] = "優惠券管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
@@ -96,7 +96,11 @@
 
                         <div class="col-md-6">
                             <label>是否可使用：</label>
-                            <input class="form-check-input" type="checkbox" value="" id="create-useable" name="Useable" />
+                            <select class="form-select" id="create-useable" name="Useable">
+                                <option value="" selected disabled>請選擇狀態</option>
+                                <option value="是">是</option>
+                                <option value="否">否</option>
+                             </select>
                         </div>
 
                         <button type="submit" class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
@@ -111,19 +115,19 @@
     <!---新增優惠券 modal-->
 
     <!---篩選優惠券狀態-->
-@*    <div class="container-fluid mt-4 mb-3">
+    <div class="container-fluid mt-4 mb-3">
         <div class="row align-items-center mb-2">
             狀態篩選：
             <div class="col d-flex justify-content-between">
-                <select class="form-select" id="payList">
+                <select class="form-select" id="statusList">
                     <option value="" selected disabled>請選擇狀態</option>
                     <option value="">全部</option>
-                    <option value="可使用">可使用</option>
-                    <option value="已停用">已停用</option>
+                    <option value="是">是</option>
+                    <option value="否">否</option>
                 </select>
             </div>
         </div>
-    </div>*@
+    </div>
     <!---篩選優惠券狀態-->
 
     <div class="container-fluid mt-4">
@@ -180,7 +184,11 @@
 
                                             <div class="col-md-6">
                                                 <label>是否可使用：</label>
-                                                <input class="form-check-input" type="checkbox" value="" id="edit-useable" name="Useable" />
+                                                <select class="form-select" id="edit-useable" name="Useable">
+                                                    <option value="" selected disabled>請選擇狀態</option>
+                                                    <option value="是">是</option>
+                                                    <option value="否">否</option>
+                                                </select>
                                             </div>
 
                                             <button type="submit" class="mt-3 btn btn-primary btn-block" name="edit-submitButton" id="edit-submitButton"
@@ -269,7 +277,7 @@
             });
         });
         //載入資料庫資料 LoadDataTable===========
-        $('#Bonus-table').DataTable({
+            var table = $('#Bonus-table').DataTable({
             language: {
                 url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/zh-HANT.json',
             },
@@ -302,7 +310,16 @@
                                                                                                                                 <button class="btn delete-button" data-id="${row.couponId}" ><i class="fas fa-trash-alt"></i></button>`
                     }
                 }
-            ]
+            ],
+            //類別篩選
+            columnDefs: [
+                { targets: 5, searchable: true },  //第6欄，索引5
+            ],
+        });
+        //篩選功能=====================
+        $('#statusList').on('change', function () {
+            var filterOption1 = $(this).val();
+            table.column(5).search(filterOption1).draw();
         });
         //編輯按鈕==============================================
         $('#Bonus-table').on('click', '.edit-button', function () {
@@ -317,7 +334,7 @@
                         $('#edit-content').val(response.data.couponContent);
                         $('#edit-expirydate').val(response.data.expiryDate);
                         $('#edit-quantity').val(response.data.totalQuantity);
-                        $('#edit-useable').prop('checked', response.data.useable)
+                        $('#edit-useable').val(response.data.useable);
                         console.log(response.data)
 
                     } else {
@@ -334,7 +351,7 @@
             const content = $('#edit-content').val();
             const expirydate = $('#edit-expirydate').val();
             const quantity = $('#edit-quantity').val();
-            const useable = $('#edit-useable').is(':checked');
+            const useable = $('#edit-useable').val();
 
             var formData = new FormData();
             formData.append("CouponId", id);
@@ -382,7 +399,7 @@
             const content = $('#create-content').val();
             const expirydate = $('#create-expirydate').val();
             const quantity = $('#create-quantity').val();
-            const useable = $('#create-useable').is(':checked');
+            const useable = $('#create-useable').val();
 
             var formData = new FormData();
             formData.append("CouponId", id);
