--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
@@ -142,7 +142,7 @@
                                 <option selected>請選擇</option>
                                 @foreach (var category in Model.ProductCategories)
                                 {
-                                    <option value="@category.CategoryName">@category.CategoryName</option>
+                                    <option value="@category.ProductCategoryId">@category.CategoryName</option>
                                 }
                             </select>
                         </div>
@@ -240,7 +240,7 @@
                                 <option selected>請選擇</option>
                                 @foreach (var category in Model.ProductCategories)
                                 {
-                                    <option value="@category.CategoryName">@category.CategoryName</option>
+                                    <option value="@category.ProductCategoryId">@category.CategoryName</option>
                                 }
                             </select>
                         </div>
