調整遊戲貨幣顯示版面，更換召喚頁面背景圖

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Login/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Login/Login.cshtml
@@ -52,7 +52,7 @@
                                         </div>
                                         <div>
                                             <label for="login-password">密碼：</label>
-                                            <input type="text" class="form-control" id="login-password"
+                                            <input type="password" class="form-control" id="login-password"
                                                    placeholder="password" required>
                                             <div class="invalid-feedback"> 請輸入密碼 </div>
                                         </div>
