--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -56,7 +56,7 @@
 
     /*轉蛋畫面*/
     #CatchaGatCha {
-        background-image: url('/images/game/summonback.png'); /* 設定背景圖片路徑 */
+        background-image: url('/images/game/summonback_v2.png'); /* 設定背景圖片路徑 */
         background-size: cover; /* 設定背景圖片覆蓋整個按鈕 */
         background-position: center; /* 設定背景圖片居中對齊 */
         border: 4px solid black; /* 移除按鈕邊框 */
