-修正 轉蛋結果無法回傳DB -新增 jquery-3.6.0.min.js

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -137,6 +137,7 @@
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
 @section Scripts{
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/js/game/DBIformation.js"></script>
     <script src="~/js/game/GameLogin.js"></script>
     <script src="~/js/game/Main.js"></script>
